--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -14,6 +14,8 @@ body {
   justify-content: space-between;
   align-items: center;
   background-color: #15191c;
+  padding: 8px 16px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.16);
 }
 
 .cabecalho__menu i::before {
@@ -28,4 +30,77 @@ body {
 
 .cabecalho__logo {
   width: 40px;
+}
+
+.menu-lateral {
+  display: flex;
+  flex-direction: column;
+
+  background-color: #15191c;
+  width: 75vw;
+  height: 100vh;
+
+  position: absolute;
+  left: -100vw;
+  transition: .25s;
+}
+
+.menu-lateral--ativo{
+    left: 0;
+    transition: .25s;
+}
+
+.menu-lateral__logo {
+  align-self: center;
+  width: 118px;
+  padding: 16px;
+}
+
+.menu-lateral__link {
+  color: #95999c;
+  height: 64px;
+  padding-left: 64px;
+
+  display: flex;
+  align-items: center;
+}
+
+.menu-lateral__link--ativo{
+    color:#FFF;
+    padding-left: 56px;
+    border-left: 8px solid #FFF;
+}
+
+.menu-lateral__link::before {
+  content: "";
+  width: 24px;
+  height: 24px;
+  font-size: 24px;
+
+  position: absolute;
+  left: 24px;
+}
+
+.menu-lateral__link--inicio::before {
+  content: "\e902";
+}
+
+.menu-lateral__link--videos::before {
+  content: "\e90e";
+}
+
+.menu-lateral__link--picos::before {
+  content: "\e909";
+}
+
+.menu-lateral__link--integrantes::before {
+  content: "\e903";
+}
+
+.menu-lateral__link--camisas::before {
+  content: "\e900";
+}
+
+.menu-lateral__link--pinturas::before {
+  content: "\e90a";
 }
