--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -42,12 +42,12 @@ body {
 
   position: absolute;
   left: -100vw;
-  transition: .25s;
+  transition: 0.25s;
 }
 
-.menu-lateral--ativo{
-    left: 0;
-    transition: .25s;
+.menu-lateral--ativo {
+  left: 0;
+  transition: 0.25s;
 }
 
 .menu-lateral__logo {
@@ -65,10 +65,10 @@ body {
   align-items: center;
 }
 
-.menu-lateral__link--ativo{
-    color:#FFF;
-    padding-left: 56px;
-    border-left: 8px solid #FFF;
+.menu-lateral__link--ativo {
+  color: #fff;
+  padding-left: 56px;
+  border-left: 8px solid #fff;
 }
 
 .menu-lateral__link::before {
@@ -103,4 +103,103 @@ body {
 
 .menu-lateral__link--pinturas::before {
   content: "\e90a";
+}
+
+.principal {
+  padding: 24px 16px;
+  display: grid;
+  gap: 16px;
+}
+
+.titulo-pagina {
+  font-size: 1.5rem;
+  font-weight: 700;
+}
+
+.titulo-secao{
+    font-size: 1.rem;
+    font-weight: 700;
+}
+
+.cartao {
+  width: 100%;
+  border-radius: 15px;
+  overflow: hidden;
+  background-color: #2c343a;
+}
+
+.cartao--destaque{
+    margin-bottom:  16px;
+}
+
+.cartao__conteudo {
+  padding: 16px;
+  display: grid;
+  grid-template-columns: auto 1fr;
+  gap: 8px;
+}
+
+.cartao__destaque{
+    grid-column: span 2;
+}
+
+.cartao__titulo {
+  font-size: 1.2rem;
+  font-weight: 700;
+  grid-column: span 2;
+}
+
+.cartao__perfil {
+  color: #95999c;
+  font-size: 0.9rem;
+  grid-column: span 2;
+}
+
+.cartao__info {
+  display: flex;
+  align-items: center;
+  justify-items: center;
+  color: #95999c;
+}
+
+.cartao__info--tempo::before {
+  content: "\e90c";
+  margin-right: 8px;
+}
+
+.cartao__info--visualizacao::before {
+  content: "\e90f";
+  margin-right: 8px;
+}
+
+.cartao__botao {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    justify-self: flex-end;
+
+    background-color: #0480DC;
+    width: 40px;
+    height: 40px;
+    border-radius: 10px;
+    font-size: 0.9rem;
+}
+
+.cartao__botao--play::before{
+    content: '\e90b';
+    font-size: 24px;
+}
+
+.cartao__botao--destaque{
+    width: 100%;
+    grid-column: span 2;
+}
+
+.cartao__botao--destaque::before{
+    margin-right: 8px;
+}
+
+.secao{
+    display: grid;
+    gap: 16px;
 }
