--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -5,8 +5,15 @@
 
 body {
   background-color: #1d232a;
-  font-family: "Opens-Sans", "icones", sans-serif;
-  color: #fff;
+  font-family: "Open Sans", "icones", sans-serif;
+  color: #ffffff;
+}
+
+@media screen and (min-width: 1440px) {
+  body {
+    display: grid;
+    grid-template-columns: auto 1fr;
+  }
 }
 
 .cabecalho {
@@ -23,7 +30,7 @@ body {
   font-size: 24px;
 }
 
-.cabecalho__notificacao::before {
+.cabecalho__notificacao i::before {
   content: "\e906";
   font-size: 24px;
 }
@@ -32,10 +39,62 @@ body {
   width: 40px;
 }
 
+.cabecalho__perfil {
+  display: none;
+}
+
+@media screen and (min-width: 1440px) {
+  .cabecalho {
+    background-color: #1d232a;
+    display: grid;
+    column-gap: 32px;
+    grid-template-columns: 1fr auto;
+    padding: 16px 60px;
+    height: 80px;
+    box-sizing: border-box;
+    grid-column: 2;
+  }
+
+  .cabecalho__menu {
+    display: none;
+  }
+
+  .cabecalho__logo {
+    display: none;
+  }
+
+  .cabecalho__perfil {
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+    column-gap: 8px;
+    align-items: center;
+    justify-self: flex-end;
+    color: #95999c;
+    padding: 8px 32px;
+    border-right: 1px solid #95999c;
+  }
+
+  .cabecalho__perfil::before {
+    content: "";
+    display: block;
+    width: 32px;
+    height: 32px;
+    background-image: url(../img/profile_2.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+
+  .cabecalho__perfil::after {
+    content: "\e90d";
+    color: #ffffff;
+    font-size: 1.5rem;
+  }
+}
+
 .menu-lateral {
   display: flex;
   flex-direction: column;
-
   background-color: #15191c;
   width: 75vw;
   height: 100vh;
@@ -51,32 +110,30 @@ body {
 }
 
 .menu-lateral__logo {
-  align-self: center;
   width: 118px;
+  align-self: center;
   padding: 16px;
 }
 
 .menu-lateral__link {
-  color: #95999c;
   height: 64px;
+  color: #95999c;
   padding-left: 64px;
-
   display: flex;
   align-items: center;
 }
 
 .menu-lateral__link--ativo {
-  color: #fff;
+  color: #ffffff;
   padding-left: 56px;
-  border-left: 8px solid #fff;
+  border-left: 8px solid #ffffff;
 }
 
 .menu-lateral__link::before {
-  content: "";
+  content: "\e900";
   width: 24px;
   height: 24px;
   font-size: 24px;
-
   position: absolute;
   left: 24px;
 }
@@ -105,6 +162,15 @@ body {
   content: "\e90a";
 }
 
+@media screen and (min-width: 1440px) {
+  .menu-lateral {
+    position: static;
+    width: 200px;
+    grid-column: 1;
+    grid-row: 1 / span 2;
+  }
+}
+
 .principal {
   padding: 24px 16px;
   display: grid;
@@ -116,9 +182,31 @@ body {
   font-weight: 700;
 }
 
-.titulo-secao{
-    font-size: 1.rem;
-    font-weight: 700;
+.titulo-secao {
+  font-size: 1.2rem;
+  font-weight: 700;
+}
+
+@media screen and (min-width: 1440px) {
+  .principal {
+    display: grid;
+    grid-template-columns: auto 1fr auto;
+    column-gap: 32px;
+    padding: 16px 60px;
+    grid-column: 2;
+
+    grid-template-areas: 
+      "titulo--pagina titulo--pagina titulo--pagina" 
+      "destaque-video destaque-video videos-recentes"  
+      "secao-videos secao-videos secao-videos"  
+      "produtos-recentes destaque-produtos destaque-produtos"  
+      "secao-produtos secao-produtos secao-produtos" 
+    ;
+  }
+
+  .titulo-pagina{
+    grid-area: titulo--pagina;
+  }
 }
 
 .cartao {
@@ -128,8 +216,8 @@ body {
   background-color: #2c343a;
 }
 
-.cartao--destaque{
-    margin-bottom:  16px;
+.cartao--destaque {
+  margin-bottom: 16px;
 }
 
 .cartao__conteudo {
@@ -139,8 +227,8 @@ body {
   gap: 8px;
 }
 
-.cartao__destaque{
-    grid-column: span 2;
+.cartao__destaque {
+  grid-column: span 2;
 }
 
 .cartao__titulo {
@@ -158,7 +246,6 @@ body {
 .cartao__info {
   display: flex;
   align-items: center;
-  justify-items: center;
   color: #95999c;
 }
 
@@ -173,33 +260,113 @@ body {
 }
 
 .cartao__botao {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    justify-self: flex-end;
-
-    background-color: #0480DC;
-    width: 40px;
-    height: 40px;
-    border-radius: 10px;
-    font-size: 0.9rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #0480dc;
+  width: 40px;
+  height: 40px;
+  border-radius: 10px;
+  font-size: 0.9rem;
+  justify-self: flex-end;
 }
 
-.cartao__botao--play::before{
-    content: '\e90b';
-    font-size: 24px;
+.cartao__botao--play::before {
+  content: "\e90b";
+  font-size: 24px;
 }
 
-.cartao__botao--destaque{
-    width: 100%;
-    grid-column: span 2;
+.cartao__botao--destaque {
+  width: 100%;
+  grid-column: span 2;
 }
 
-.cartao__botao--destaque::before{
-    margin-right: 8px;
+.cartao__botao--destaque::before {
+  margin-right: 8px;
 }
 
-.secao{
+.cartao--recentes {
+  display: none;
+}
+
+@media screen and (min-width: 1440px) {
+  .cartao--recentes {
     display: grid;
-    gap: 16px;
+    grid-template-columns: auto auto;
+    align-items: center;
+    row-gap: 24px;
+    width: 256px;
+    padding: 16px;
+    box-sizing: border-box;
+  }
+
+  .cartao--recentes .cartao__titulo {
+    grid-column: auto;
+  }
+
+  .cartao__link {
+    font-size: 0.8rem;
+    font-weight: 600;
+    color: #0480dc;
+    justify-self: flex-end;
+  }
+
+  .cartao__lista {
+    display: grid;
+    row-gap: 16px;
+    grid-column: span 2;
+  }
+
+  .cartao__item {
+    display: grid;
+    grid-template-columns: auto 1fr;
+    gap: 8px;
+  }
+
+  .cartao__item-thumbnail {
+    width: 32px;
+    grid-row: span 2;
+  }
+
+  .cartao__item-titulo {
+    font-size: 0.9rem;
+    line-height: 1.2rem;
+    font-weight: 700;
+  }
+
+  .cartao__item-perfil {
+    font-size: 0.8rem;
+    color: #95999c;
+  }
 }
+
+.secao {
+  display: grid;
+  gap: 16px;
+}
+
+.destaque-video{
+  grid-area: destaque-video;
+}
+
+.videos-recentes{
+  grid-area: videos-recentes;
+}
+
+.secao-videos{
+  grid-area:  secao-videos;
+}
+
+.destaque-produtos{
+  grid-area: destaque-produtos;
+}
+
+.produtos-recentes{
+  grid-area: produtos-recentes;
+}
+
+.secao-produtos{
+  grid-area: secao-produtos;
+}
+
+
