--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -182,7 +182,7 @@ body {
   font-weight: 700;
 }
 
-.titulo-secao {
+.titulo--secao {
   font-size: 1.2rem;
   font-weight: 700;
 }
@@ -195,17 +195,20 @@ body {
     padding: 16px 60px;
     grid-column: 2;
 
-    grid-template-areas: 
-      "titulo--pagina titulo--pagina titulo--pagina" 
-      "destaque-video destaque-video videos-recentes"  
-      "secao-videos secao-videos secao-videos"  
-      "produtos-recentes destaque-produtos destaque-produtos"  
-      "secao-produtos secao-produtos secao-produtos" 
-    ;
+    grid-template-areas:
+      "titulo--pagina titulo--pagina titulo--pagina"
+      "destaque-video destaque-video videos-recentes"
+      "secao-videos secao-videos secao-videos"
+      "produtos-recentes destaque-produtos destaque-produtos"
+      "secao-produtos secao-produtos secao-produtos";
   }
 
-  .titulo-pagina{
+  .titulo-pagina {
     grid-area: titulo--pagina;
+  }
+
+  .titulo--secao {
+    grid-column: span 4;
   }
 }
 
@@ -214,6 +217,10 @@ body {
   border-radius: 15px;
   overflow: hidden;
   background-color: #2c343a;
+}
+
+.cartao__imagem--desktop {
+  display: none;
 }
 
 .cartao--destaque {
@@ -290,6 +297,21 @@ body {
 }
 
 @media screen and (min-width: 1440px) {
+  .cartao--destaque {
+    margin-bottom: 0;
+  }
+
+  .cartao__botao--destaque {
+    grid-column: auto;
+    padding: 16px 8px;
+  }
+
+  .cartao__imagem--desktop {
+    display: block;
+  }
+  .cartao__imagem--mobile {
+    display: none;
+  }
   .cartao--recentes {
     display: grid;
     grid-template-columns: auto auto;
@@ -298,6 +320,7 @@ body {
     width: 256px;
     padding: 16px;
     box-sizing: border-box;
+    align-self: flex-start;
   }
 
   .cartao--recentes .cartao__titulo {
@@ -345,28 +368,32 @@ body {
   gap: 16px;
 }
 
-.destaque-video{
-  grid-area: destaque-video;
+@media screen and (min-width: 1440px) {
+  .secao {
+    grid-template-columns: repeat(4, 1fr);
+  }
+
+  .destaque-video {
+    grid-area: destaque-video;
+  }
+
+  .videos-recentes {
+    grid-area: videos-recentes;
+  }
+
+  .secao-videos {
+    grid-area: secao-videos;
+  }
+
+  .destaque-produtos {
+    grid-area: destaque-produtos;
+  }
+
+  .produtos-recentes {
+    grid-area: produtos-recentes;
+  }
+
+  .secao-produtos {
+    grid-area: secao-produtos;
+  }
 }
-
-.videos-recentes{
-  grid-area: videos-recentes;
-}
-
-.secao-videos{
-  grid-area:  secao-videos;
-}
-
-.destaque-produtos{
-  grid-area: destaque-produtos;
-}
-
-.produtos-recentes{
-  grid-area: produtos-recentes;
-}
-
-.secao-produtos{
-  grid-area: secao-produtos;
-}
-
-
